[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grid-energy-arbitrage"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
